--- a/test/src/main/res/layout/fragment3.xml
+++ b/test/src/main/res/layout/fragment3.xml
@@ -2,13 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff7f"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:background="#ffffffff"
         android:src="@drawable/pepe" />
+
+    <FrameLayout
+        android:id="@+id/below"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ff7f7fff" />
 </LinearLayout>
