--- a/test/src/main/res/layout/fragment2.xml
+++ b/test/src/main/res/layout/fragment2.xml
@@ -1,14 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff7f"
+    android:background="#ffffffff"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
+    <carbon.widget.LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffffff"
-        android:src="@drawable/pepe" />
+        app:carbon_rippleColor="?attr/carbon_rippleColor">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/carbon_margin"
+            android:background="#ffffffff"
+            android:src="@drawable/pepe" />
+
+        <carbon.widget.TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/carbon_margin"
+            android:text="Perry the platypus" />
+    </carbon.widget.LinearLayout>
+
+    <carbon.widget.LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:carbon_rippleColor="?attr/carbon_rippleColor">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/carbon_margin"
+            android:background="#ffffffff"
+            android:src="@drawable/pepe" />
+
+        <carbon.widget.TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/carbon_margin"
+            android:text="Perry the platypus" />
+    </carbon.widget.LinearLayout>
+
+    <carbon.widget.LinearLayout
+        android:id="@+id/row"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:carbon_rippleColor="?attr/carbon_rippleColor">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/carbon_margin"
+            android:background="#ffffffff"
+            android:src="@drawable/pepe" />
+
+        <carbon.widget.TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/carbon_margin"
+            android:text="Perry the platypus" />
+    </carbon.widget.LinearLayout>
+
+    <carbon.widget.LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:carbon_rippleColor="?attr/carbon_rippleColor">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/carbon_margin"
+            android:background="#ffffffff"
+            android:src="@drawable/pepe" />
+
+        <carbon.widget.TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/carbon_margin"
+            android:text="Perry the platypus" />
+    </carbon.widget.LinearLayout>
 </LinearLayout>
