rewrote Fragment's lifecycle

--- a/test/src/main/res/layout/fragment_main.xml
+++ b/test/src/main/res/layout/fragment_main.xml
@@ -38,5 +38,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Fragment 2" />
+
+        <carbon.widget.Button
+            android:id="@+id/popbackstack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="clear" />
     </carbon.widget.LinearLayout>
 </carbon.widget.DrawerLayout>
