StateMachine, TextViewKeyFrame/AnimatorListener, better synchronization

--- a/test/src/main/res/layout/fragment3.xml
+++ b/test/src/main/res/layout/fragment3.xml
@@ -19,6 +19,7 @@
 
         <carbon.widget.TextView
             android:layout_width="match_parent"
+            android:id="@+id/title"
             android:layout_height="wrap_content"
             android:padding="@dimen/carbon_margin"
             android:text="Perry the platypus"
