--- a/test/src/main/res/layout/fragment2.xml
+++ b/test/src/main/res/layout/fragment2.xml
@@ -61,6 +61,7 @@
             android:src="@drawable/pepe" />
 
         <carbon.widget.TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
